<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/leftLayout"
    android:layout_marginTop="@dimen/leftLayout"
    android:layout_marginLeft="@dimen/leftLayout"
    android:layout_marginRight="@dimen/leftLayout"
    tools:context="com.ronicode.tarea2_curso3.ConfirmacionDatos">

    <LinearLayout
        android:id="@+id/llDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        >

        <TextView
            android:id="@+id/tvConfirmar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/confirmar"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/text_confirmar"
            android:inputType="none"
            />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/nombre"
            android:text="Pepito Pérez"
            android:inputType="none"
            />

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/fecha"
            android:text="11/11/1979"
            android:inputType="none"
            />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/telefono"
            android:text="@string/text_telefono"
            android:inputType="none"
            />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/email"
            android:text="@string/text_email"
            android:inputType="none"
            />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/descripcion"
            android:text="@string/text_descripcion"
            android:maxLines="@string/campos"
            android:inputType="none"
            />
        
        <Button
            android:id="@+id/btnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorBlanco"
            android:text="@string/editar"
            android:textAllCaps="false"
            />



    </LinearLayout>
</RelativeLayout>
