<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/leftLayout"
    android:layout_marginTop="@dimen/leftLayout"
    android:layout_marginLeft="@dimen/leftLayout"
    android:layout_marginRight="@dimen/leftLayout"
    tools:context="com.ronicode.tarea2_curso3.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llNombre"
        >

        <ImageView
            android:id="@+id/ivNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/contacts_48"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            >

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="@string/ems"
                android:hint="@string/nombre"
                android:inputType="text"
                android:maxLines="@string/linea"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llFecha"
        android:layout_below="@+id/llNombre"
        android:onClick="showDatePickerDialog"
        >

        <ImageView
            android:id="@+id/ivFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/age_48"
            />

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            android:ems="@string/ems"
            android:text="@string/fecha"
            android:inputType="none"
            android:maxLines="@string/linea"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/llFecha"
        >

        <ImageView
            android:id="@+id/ivTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/phone_48"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilTelefono"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/left"
            >

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="@string/ems"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:maxLines="@string/linea"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/llTelefono"
        >

        <ImageView
            android:id="@+id/ivEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/email_48"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            >
            
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="@string/ems"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="@string/linea"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/llEmail"
        >

        <ImageView
            android:id="@+id/ivDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/resume_48"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left"
            >

            <EditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="@string/ems"
                android:hint="@string/descripcion"
                android:inputType="textMultiLine"
                android:maxLines="@string/campos"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:id="@+id/llSiguiente"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorBlanco"
            android:text="@string/siguiente"
            />
    </LinearLayout>
</RelativeLayout>
